fix: use gap instead of margin and padding

--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -5,11 +5,10 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 variables.$spacing * -2;
+    gap: variables.$spacing * 2;
     padding: variables.$spacing;
 
-    [class^='col'] {
-        padding: variables.$spacing;
+    & > * {
         width: 100%;
     }
 }
